--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			</div>
 
 			<div id="content" class="um-content p15">
-	
+				<a href="html/login.html">aaa</a>
 			</div>
 
 			<div id="footer" class="um-footer">
@@ -37,7 +37,7 @@
 						<i class="ti-agenda f20"></i>
 						<div class="f12 lh1">通讯录</div>
 					</a>
-					<a id="item3" href="#" class="um-footerbar-item">
+					<a id="item3" href="html/login.html" class="um-footerbar-item">
 						<i class="ti-user f20"></i>
 						<div class="f12 lh1">我</div>
 					</a>
